[package]
name = "ad-lib"
version = "1.0.0"
license = "MIT OR Apache-2.0"
repository = "https://github.com/yoshuawuyts/ad-lib"
documentation = "https://docs.rs/ad-lib"
description = "Rust libs template"
readme = "README.md"
edition = "2018"
keywords = []
categories = []
include = ["src/templates/*", "src/main.rs"]

authors = [
    "Yoshua Wuyts <yoshuawuyts@gmail.com>"
]

[features]

[dependencies]
structopt = "0.3.15"
dialoguer = "0.6.2"
femme = "2.1.0"
log = "0.4.8"

[dev-dependencies]
